# ChangeLog for dev-tcltk/snack
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-tcltk/snack/ChangeLog,v 1.59 2013/09/05 19:44:44 mgorny Exp $

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> snack-2.2.10-r6.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

  08 Feb 2013; Agostino Sarubbo <ago@gentoo.org> snack-2.2.10-r5.ebuild:
  Stable for alpha, wrt bug #446822

  06 Feb 2013; Agostino Sarubbo <ago@gentoo.org> snack-2.2.10-r5.ebuild:
  Stable for sparc, wrt bug #446822

  27 Jan 2013; Agostino Sarubbo <ago@gentoo.org> snack-2.2.10-r5.ebuild:
  Stable for ppc, wrt bug #446822

  26 Jan 2013; Agostino Sarubbo <ago@gentoo.org> snack-2.2.10-r5.ebuild:
  Stable for ppc64, wrt bug #446822

*snack-2.2.10-r6 (25 Jan 2013)

  25 Jan 2013; Justin Lecher <jlec@gentoo.org> +snack-2.2.10-r6.ebuild:
  Respect AR, #453914; respect CFLAGS, #453916; use distutils-r1 and
  autotools_utils eclasses

  24 Jan 2013; Agostino Sarubbo <ago@gentoo.org> snack-2.2.10-r5.ebuild:
  Stable for x86, wrt bug #446822

  24 Jan 2013; Agostino Sarubbo <ago@gentoo.org> snack-2.2.10-r5.ebuild:
  Stable for amd64, wrt bug #446822

  24 Jan 2013; Jeroen Roovers <jer@gentoo.org> snack-2.2.10-r5.ebuild:
  Stable for HPPA (bug #446822).

*snack-2.2.10-r5 (09 Jan 2013)

  09 Jan 2013; Justin Lecher <jlec@gentoo.org> +snack-2.2.10-r5.ebuild,
  +files/snack-2.2.10-CVE-2012-6303-fix.patch, metadata.xml:
  Add fix from Fedora for CVE-2012-6303, #446822

  05 Apr 2011; Ulrich Mueller <ulm@gentoo.org> snack-2.2.9.ebuild,
  snack-2.2.10-r2.ebuild:
  Depend on dev-lang/python because virtual/python will go away, bug 358849.

  09 Jun 2010; Christoph Mende <angelos@gentoo.org> snack-2.2.10-r4.ebuild:
  Stable on amd64 wrt bug #317661

  24 May 2010; Raúl Porcel <armin76@gentoo.org> snack-2.2.10-r4.ebuild:
  alpha/sparc/x86 stable wrt #317661

  12 May 2010; Brent Baude <ranger@gentoo.org> snack-2.2.10-r4.ebuild:
  stable ppc64, bug 317661
