@@ -5,27 +5,18 @@ AUX alsa-undef-sym.patch 1225 SHA256 98ea274e8d6bd63e7ac785c65dcbd7d45fd7f904af9
 AUX snack-2.2.10-CVE-2012-6303-fix.patch 778 SHA256 a3a897ed458484a67af00bc98406a739dfe40e263a01697d4f8aff0b948592f6 SHA512 6e2f7fcf8ca0c2792cf52432340f2319b8c82677a3568c9e382f91758f5e6bf26c3a05939d4a748c4198c4e50f27141ebd2cb298d8363765ed6582192d64d3e8 WHIRLPOOL 2e14c1b276e5a01015a9c2288a1d2e81add3e0bec367b64a9a382a1e0a47ba72c78b2958822ae3c0ed8fa1d95cc21a7138060cc234522a21be4aac368d47f76e
 AUX snack-2.2.10-darwin.patch 1108 SHA256 8ea2ae5fba07018cf457df25e008e0013bcfdcde46bd16f9aa8c26caa8d64445 SHA512 0d82270d830c8b7d15dcbead05d80c15666d1bac164f26c045859f7f4dc4c098961b48272ecd0b059a1b36ba8d560c563fe8e40add822f311026faf5f7eeaf0a WHIRLPOOL 0ea35f68784c18d1a95034a8810e95b3dbb2288e162122d3ecfc2689b9209802b356f6b1683cc4fdaea028004549d524269261e837b4185b848e4e923835c969
 DIST snack2.2.10.tar.gz 1798252 SHA256 4bfe764547ab92ba58f43b77366dbb7c7b3512d65a27cdbf9e585a9cb64ce81e SHA512 c17ad332fa4f3ded006b97ceca85cada079e4c7cd933768b289c13dadca1b8803fccaf709ec2def5af4abe92c307f25597ebfa6f94df2d681e40815cd7eccb9b WHIRLPOOL 8374d482041a60443fff3c28614d08b97390648367088d37b7c9a140355e8481e444f09f0c0c9fd7370903b33a2f46eae7c96ec5dbce532bb47f06537ce799ee
-EBUILD snack-2.2.10-r4.ebuild 2398 SHA256 0ddeff5ea24feb11e857b6030d7373a461f488dc7faf5d1c4284e01720ea62f7 SHA512 1dbe01f35b55389785ea9feeeb55b7b88c2d2f795136bc4b452420fe4a4cb57243a009bc4a084ceaf63bea8035c77a0db739ab8147629955f9c188bd567437da WHIRLPOOL 462d758adf0e7afbd449f4ca7ef761832ee7cb39b579b720c13c2a4d8689293a1355a0999e0c25a18946d4f536db57203f1906bc85898ba686fec90428ff9438
 EBUILD snack-2.2.10-r5.ebuild 2325 SHA256 a8207d5e026305adf55a14e1032becb6709d7bbf025733b1970abcfa4d3b9431 SHA512 8ffaa4fd27411d9df648e60a0d5f81ea80e4c871830d9009c3b64bbdf45dee32753179b68ad880f1ae8cb6657683100d04ec271f9257f229d3914b655fe31f80 WHIRLPOOL 52bd6ae40a61e2d410414ceabcbbb0c0446ac5b39d305cd5dac7d6f3078197a3d20a105c7708826c9856587519f0b5c2fda7e1ffeb68be539977f14dc8921ac9
 EBUILD snack-2.2.10-r6.ebuild 2135 SHA256 51d52d33d439125d81e56c0fb2e908344139334dd96427926c439cb403cfe6ee SHA512 0c915b6178884c7e84e8a431c34ab1cb5b05ad8c903a32804477008372e4dec8695b88e1d9c5be3be939df83e18302a237627b27e2f15cd713733c3bba5cd7a0 WHIRLPOOL 5614b9a84319671911b50b1409851d8f02f34a29332c8b3f4651e474895702f0581bc563747a238cefd70006b3829bab3b17a461001311aa95b02f4e7c59daa6
-MISC ChangeLog 7400 SHA256 6b1dcb35f1a212b9efc8b4d51c1e9e87a589651eed82627a3977d07a1874eba2 SHA512 98033bdb147dd6265d7165c13a871da605c68eef133766d71dc9c666c14299824e6d90c3adc67568dfe2eac3f4bc3b8afea42c7689a0e546d1848247fe0b2d66 WHIRLPOOL f5ccf2a8b6d5411550ecdc4e3ef2f1f12f997065bae3656f14235400e241ce5066e7e42f4e10a245ade2b5ad510bda2fa6b860cecd81b2a8b61cf6ed7b807b7d
+MISC ChangeLog 7525 SHA256 549ec7e7bd49e1c009c855aa7f4ed531c4ac1c0029b72b82e798c5e83ad770b7 SHA512 207d0df7a7bf9ec31bb3cf9f8237920bf64b7cadec879daba8629a825ba887bbec0c4a6903fd7f22c7e057a571498f581cfb96a14ab4a3108f0de965527d978e WHIRLPOOL ec845ac62cb710f830fdf2c5268dd03130d28d118b069d3a08eef0c5e2c0334a37836c0b2106d1fd4a3d70e3434da5b31061d8a45fe826864bc77f5281a9ba12
 MISC metadata.xml 160 SHA256 225a6f78d287329cdf2f4ed57468be28bd6565fd9a62207c2cc48e25ac9d3537 SHA512 a50627bda9ed953daf422b5a2e89b5b64e296d1a023d767c8a4ebb2cd51cd0036cecce455762a54e7d669f94d17d9de21052bac94fc08b1365ef42eb2f267742 WHIRLPOOL 61fa22d50aaf2bdecc467e26c9675cf7949ad55a4a8821730c91d1bd73f83fc4c35660851961310efa450e337a7ef572a925e186b8b05984d6315efc509fd365
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.21 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQJ8BAEBCABmBQJSKN99XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZONpwQAKkOqZuwKwR6P5uF157Gs/O+
-JW4eKQnB+VsAQ7NG2fxYPAu7LSpTPw3KVv2SAjfpa0GyxFZQOea2sjP87rmJQSHt
-v27OLmZZNNdm0eFkislSxHHU76HfCVfncdQ7TOdVqTpl7lacYU3LUveQkH+wVkPH
-G8NpuRGDxVN8IU5/gNbQnSHhyc6gkEWxr6X3WOWzgynoXEIUzcI/AQTgKKI4vKdR
-xtqesE3D+LYNm3oL7sYKCpadNySFcoLl80b7HdEYHIipSYBnxGiL5l89yphN3vfn
-ABcZtEUOOtxxf/nHzui0SN780BwJAXTKEqB1RkGuMYt0ThHVJZtGV6CmQgV5nyZE
-0jEm7XZqF3KSQlsGgYqWWg/+GSOifadIORW/TAuTaDilAg92IziYDqJESqXW/0HL
-E9TxSnBIpBeHlN8UYqHuonjZqH5Niy3GmnDqE2c/9uPPZcpyZcmXN60sXcU9E3fn
-2o0MX7a1xvr8Mq6yjA3em7FOFc/njnKyQBgnmxTRk3RnPjAH2pO3lDYTq3LUj/2n
-+FDAROVdfd/3yd90AFNIJ+Kv5BlzxpruY7x6CZVri8+wrOWwWm0FpFGGWvfe4IPG
-gJVICWqEB27Bq/kuSQHr+FR/EKKmKkexFVs10d4CpigHRU6M0JU+pNAroZ8jTjLD
-//vhr0ghM68VEc9JBqeU
-=zPLp
+iQEcBAEBCAAGBQJSMEBKAAoJECo/aRed92675nsH/AutrREesx6bS9ZiPSeeyXV1
+N2JcqvYxfdNDBh12rRf1dNkVp5cBcQPuX9u9RBcIEl3VPIC8OAzDVgSdbU/smu8n
+saN6ryHbX9n7aRSyJ386gyF8DMXxSSbuPEBWMO0zY/+EkD/iZT9AT3NE0MKSGwRb
+He87KFnelBFXALlJHUItkCI6HbAMNY/jrkXsrjLAQZbfWOUuKyWEtfuWKAvahS3j
+AbKCyPC8/aVyS/alXb/+eGwm2c4FaOBmeTOGsWCohzJ+M0CbIbr/jYVWbOuIPTEf
+59IqwxmAFbU3sSXZ6G4oV7RzLV6HCU+rEkBbzY/2/IT4ZPqDip3nIALWgUGZgkY=
+=rwbg
 -----END PGP SIGNATURE-----
