@@ -1,6 +1,9 @@
 # ChangeLog for dev-tcltk/snack
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-tcltk/snack/ChangeLog,v 1.59 2013/09/05 19:44:44 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-tcltk/snack/ChangeLog,v 1.60 2013/09/11 10:06:18 pinkbyte Exp $
+
+  11 Sep 2013; Sergey Popov <pinkbyte@gentoo.org> -snack-2.2.10-r4.ebuild:
+  Cleanup vulnerable revision, wrt bug #446822
 
   05 Sep 2013; Michał Górny <mgorny@gentoo.org> snack-2.2.10-r6.ebuild:
   Clean up PYTHON_COMPAT from old implementations.
